apps/base/postgres/adminer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: postgres
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:5.4.1@sha256:bcbb0206f5d63edc84b302846e46be90e3020551da82a1212484d781673e3723
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
